# zones

./: .gitmodules  Cargo.toml  Dockerfile.chef  Dockerfile.reproducible  Justfile  README.md  deny.toml  invariants.md
.codex/skills/private-zone-rpc/: SKILL.md
.codex/skills/private-zone-rpc/agents/: openai.yaml
.codex/skills/private-zone-rpc/scripts/: private_rpc_call.sh
.codex/skills/run-zone-dev/: SKILL.md
.codex/skills/run-zone-dev/agents/: openai.yaml
.codex/skills/zonefactory-deploy/: SKILL.md
.codex/skills/zonefactory-deploy/agents/: openai.yaml
.codex/skills/zones-deploy-debug/: SKILL.md
.codex/skills/zones-deploy-debug/references/: commands.md
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: build.yml  docker-profiling.yml  docker.yml  label-pr.yml  lint.yml  pr-audit.yml  release.yml  reproducible-build.yml  scan-github-actions.yml  specs.yml  test.yml
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/contracts/src/precompiles/: common.rs  mod.rs  swap_and_deposit_router.rs  tempo_state.rs  tempo_state_reader.rs  zone_factory.rs  zone_inbox.rs  zone_outbox.rs  zone_portal.rs  zone_tx_context.rs
crates/evm/: Cargo.toml
crates/evm/src/: executor.rs  lib.rs  tx_context.rs
crates/evm/src/zone_evm/: contract_creation.rs  mod.rs
crates/l1/: Cargo.toml
crates/l1/src/: block.rs  ext.rs  lib.rs  metrics.rs  subscriber.rs  tests.rs
crates/l1/src/state/: cache.rs  mod.rs  precompile.rs  provider.rs
crates/l1/src/state/tip403/: cache.rs  mod.rs  policy_set.rs  provider.rs  task.rs
crates/node/: Cargo.toml  README.md
crates/node/assets/: zone-dev-genesis.json
crates/node/src/: cli.rs  dev.rs  engine.rs  genesis.rs  lib.rs  node.rs  rpc.rs
crates/node/tests/: advance_tempo.rs  l1_state_reader.rs
crates/node/tests/assets/: zone-test-genesis.json
crates/node/tests/it/: README.md  demo_cross_zone.rs  demo_shield_and_send.rs  deposit.rs  e2e.rs  enable_token.rs  l1_e2e.rs  main.rs  private_rpc.rs  private_rpc_e2e.rs  restart_e2e.rs  stepping_e2e.rs  tip403_policy.rs  tip403_transfers.rs  utils.rs
crates/payload/: Cargo.toml
crates/payload/src/: attrs.rs  builder.rs  lib.rs  withdrawal_reveal.rs
crates/precompiles/: Cargo.toml
crates/precompiles/src/: aes_gcm.rs  ecies.rs  lib.rs  tempo_state.rs  tip20_factory.rs  ztip20.rs
crates/precompiles/src/aes_gcm/: dispatch.rs  mod.rs
crates/precompiles/src/chaum_pedersen/: dispatch.rs  mod.rs
crates/precompiles/src/tip20_factory/: dispatch.rs  mod.rs
crates/precompiles/src/tip403_proxy/: dispatch.rs  mod.rs
crates/precompiles/src/ztip20/: dispatch.rs  mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: abi.rs  constants.rs  lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: filter.rs  handlers.rs  lib.rs  policy.rs  proxy.rs  server.rs  types.rs  ws.rs
crates/rpc/src/auth/: token.rs
crates/rpc/tests/it/: ws.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: encryption_key.rs  lib.rs  metrics.rs  monitor.rs  rpc.rs  settlement.rs  withdrawals.rs
crates/tempo-zone/: Cargo.toml  README.md
crates/tempo-zone/src/: abi.rs  batch.rs  cli.rs  engine.rs  evm.rs  executor.rs  ext.rs  l1.rs  l1_state.rs  lib.rs  node.rs  nonce_keys.rs  payload.rs  rpc.rs  sequencer.rs  withdrawals.rs  zonemonitor.rs
crates/tempo-zone/src/l1/: block.rs  deposit.rs  event.rs  mod.rs  queue.rs  subscriber.rs  tests.rs
crates/tempo-zone/src/l1_state/: cache.rs  mod.rs  provider.rs  versioned.rs
crates/tempo-zone/src/payload/: builder.rs  mod.rs
crates/tempo-zone/src/precompiles/: mod.rs
crates/tempo-zone/tests/: advance_tempo.rs  l1_state_reader.rs
crates/tempo-zone/tests/assets/: zone-test-genesis.json
crates/tempo-zone/tests/it/: demo_cross_zone.rs  deposit.rs  l1_e2e.rs  private_rpc.rs  private_rpc_e2e.rs  tip403_policy.rs  tip403_transfers.rs  utils.rs
docs/: ZONES.md
scripts/: reproducible-build.sh
specs/: spec.md
specs/ref-impls/: foundry.toml
specs/ref-impls/src/interfaces/: IZone.sol
specs/ref-impls/src/l1/: SwapAndDepositRouter.sol  ZoneFactory.sol  ZonePortal.sol
specs/ref-impls/src/libraries/: WithdrawalQueueLib.sol
specs/ref-impls/src/predeploys/: TempoState.sol  ZoneInbox.sol  ZoneOutbox.sol
specs/ref-impls/src/tempo/: TempoState.sol  Verifier.sol  ZonePortal.sol
specs/ref-impls/src/token/: PrivateZoneToken.sol
specs/ref-impls/src/zone/: IZone.sol  SwapAndDepositRouter.sol  TempoState.sol  WithdrawalQueueLib.sol  ZoneConfig.sol  ZoneFactory.sol  ZoneInbox.sol  ZoneMessenger.sol  ZoneOutbox.sol  ZonePortal.sol
specs/ref-impls/test/: BaseTest.t.sol
specs/ref-impls/test/fixtures/: encryptedDepositHashChain.json  malformedTempoHeaders.json
specs/ref-impls/test/l1/: SwapAndDepositRouter.t.sol  ZoneBridge.t.sol  ZoneFactory.t.sol  ZoneIntegration.t.sol  ZoneMessenger.t.sol  ZonePortal.t.sol  ZonePortalGasLimit.t.sol
specs/ref-impls/test/libraries/: BlockHashHistory.t.sol  DepositQueueLib.t.sol  EncryptedDeposit.t.sol  EncryptionKeyLayout.t.sol  Secp256k1Lib.t.sol  WithdrawalQueueLib.t.sol
specs/ref-impls/test/mocks/: MockEIP2935.sol  MockTempoState.sol  MockVerifier.sol  MockZoneToken.sol
specs/ref-impls/test/predeploys/: TempoState.t.sol  ZoneConfig.t.sol  ZoneInbox.t.sol  ZoneOutbox.t.sol  ZoneSymbolic.t.sol
specs/ref-impls/test/tempo/: SwapAndDepositRouter.t.sol  TempoState.t.sol  Verifier.t.sol  ZoneBridge.t.sol  ZoneFactory.t.sol  ZoneIntegration.t.sol  ZoneMessenger.t.sol  ZonePortal.t.sol  ZonePortalGasLimit.t.sol
specs/ref-impls/test/token/: PrivateZoneToken.t.sol
specs/ref-impls/test/verifier/: Verifier.t.sol
specs/ref-impls/test/zone/: BlockHashHistory.t.sol  DepositQueueLib.t.sol  EncryptedDeposit.t.sol  EncryptionKeyLayout.t.sol  PrivateZoneToken.t.sol  Secp256k1Lib.t.sol  SwapAndDepositRouter.t.sol  TempoState.t.sol  Verifier.t.sol  ZoneBridge.t.sol  (+10 more)
xtask/: Cargo.toml
xtask/src/: create_zone.rs  demo_blacklist.rs  demo_swap_and_deposit.rs  deploy_router.rs  encrypted_deposit.rs  generate_zone_genesis.rs  set_encryption_key.rs  spam_deposits.rs  zone_info.rs  zone_utils.rs
(+8 files in other folders)
