[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
publish = false

[workspace]
members = [
  "bin/tempo-zone",
  "crates/contracts",
  "crates/evm",
  "crates/l1",
  "crates/payload",
  "crates/precompiles",
  "crates/primitives",
  "crates/tempo-zone",
  "crates/rpc",
  "xtask",
]

# Resolver 3 is available with edition 2024
resolver = "3"

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"
incremental = true

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# tempo (from upstream)
tempo-alloy = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7" }
tempo-chainspec = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }
tempo-consensus = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }
tempo-contracts = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false, features = [
  "serde",
] }
tempo-evm = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }
tempo-node = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7" }
tempo-payload-types = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }
tempo-precompiles = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }
tempo-precompiles-macros = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false, features = [
  "reth",
  "serde",
  "serde-bincode-compat",
  "reth-codec",
] }
tempo-revm = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }
tempo-transaction-pool = { git = "https://github.com/tempoxyz/tempo", rev = "65185565b01bc9f406a06c522357954d75ce7cb7", default-features = false }

# zones
tempo-zone-contracts = { path = "crates/contracts", default-features = false }
zone-evm = { path = "crates/evm" }
zone-l1 = { path = "crates/l1" }
zone-payload = { path = "crates/payload" }
zone-precompiles = { path = "crates/precompiles", default-features = false }
zone-primitives = { path = "crates/primitives", default-features = false }
zone-rpc = { path = "crates/rpc" }

# reth
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-primitives-traits = { version = "0.5.2", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "f152114", features = [
  "std",
  "optional-checks",
] }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "f152114" }
revm = { version = "41.0.0", features = [
  "optional_fee_charge",
], default-features = false }

# alloy
alloy = { version = "2.1.0", default-features = false }
alloy-consensus = { version = "2.1.0", default-features = false }
alloy-contract = { version = "2.1.0", default-features = false }
alloy-eips = { version = "2.1.0", default-features = false }
alloy-evm = { version = "0.37.0", default-features = false }
alloy-network = { version = "2.1.0", default-features = false }
alloy-primitives = { version = "1.6.0", default-features = false }
alloy-provider = { version = "2.1.0", default-features = false }
alloy-rlp = { version = "0.3.15", default-features = false }
alloy-rpc-client = "2.1.0"
alloy-rpc-types-engine = "2.1.0"
alloy-rpc-types-eth = { version = "2.1.0" }
alloy-signer = "2.1.0"
alloy-signer-local = "2.1.0"
alloy-sol-types = { version = "1.6.0", default-features = false }
alloy-transport = "2.1.0"

# commonware
commonware-codec = "=2026.4.0"
commonware-consensus = "=2026.4.0"
commonware-cryptography = "=2026.4.0"
commonware-math = "=2026.4.0"
commonware-utils = "=2026.4.0"

# misc
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
either = "1.15.0"
eyre = "0.6.12"
futures = "0.3.31"
indicatif = "0.18"
itertools = "0.14.0"
metrics = "0.24.3"
k256 = { version = "0.13.4", features = ["arithmetic", "ecdh"] }
parking_lot = "0.12.4"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
rand = "0.8.5"
sha2 = "0.10.9"
rayon = "1.10"
secp256k1 = { version = "0.30.0", features = ["recovery", "global-context"] }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = "1.0.142"
thiserror = "2"
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
tokio-tungstenite = "0.28"
tracing = "0.1.41"
