[package]
name = "zone-payload"
description = "Tempo Zone payload types and builder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# tempo
tempo-chainspec.workspace = true
tempo-evm.workspace = true
tempo-node.workspace = true
tempo-payload-types.workspace = true
tempo-primitives.workspace = true
tempo-revm.workspace = true
tempo-transaction-pool.workspace = true
tempo-zone-contracts = { workspace = true, features = ["std", "serde", "rpc"] }
zone-l1.workspace = true
zone-precompiles = { workspace = true, features = ["std"] }

# reth
reth-basic-payload-builder.workspace = true
reth-chainspec.workspace = true
reth-errors.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-node-builder.workspace = true
reth-payload-builder.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-revm.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-sol-types.workspace = true

# misc
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
