[package]
name = "zone-primitives"
description = "Primitive types used by the zone"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["std", "serde"]
std = [
    "alloy-primitives/std",
    "alloy-rlp/std",
    "serde?/std",
]
serde = ["dep:serde", "alloy-primitives/serde"]
